tests/lean/noncomp.lean.expected.out
noncomp.lean:5:11: error: definition 'f' is noncomputable, it depends on 'n'
